build_output.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:150: error: cannot find symbol
                if ("Science".equals(stream)) intent = new Intent(this, elevensciencehomepage.java);
                                                                                             ^
  symbol:   variable java
  location: class elevensciencehomepage
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:151: error: cannot find symbol
                else if ("Commerce".equals(stream)) intent = new Intent(this, elevencommercehome.java);
                                                                                                ^
  symbol:   variable java
> Task :app:compileDebugJavaWithJavac
  location: class elevencommercehome
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:152: error: cannot find symbol
                else if ("Arts".equals(stream)) intent = new Intent(this, elevenartshome.java);
                                                                                        ^
  symbol:   variable java
  location: class elevenartshome
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:154: error: cannot find symbol
                if ("Science".equals(stream)) intent = new Intent(this, twelvesciencehome.java);
                                                                                         ^
  symbol:   variable java
  location: class twelvesciencehome
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:155: error: cannot find symbol
                else if ("Commerce".equals(stream)) intent = new Intent(this, twelvecommercehome.java);
                                                                                                ^
  symbol:   variable java
  location: class twelvecommercehome
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:156: error: cannot find symbol
                else if ("Arts".equals(stream)) intent = new Intent(this, twelveartshome.java);
                                                                                        ^
  symbol:   variable java
  location: class twelveartshome
C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:160: error: cannot find symbol
                intent = new Intent(this, elevencommercehome.java);
                                                            ^
  symbol:   variable java
  location: class elevencommercehome
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\manageteachers.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors

> Task :app:compileDebugJavaWithJavac FAILED
[Incubating] Problems report is available at: file:///C:/Users/kinga/AndroidStudioProjects/finalyearproject/smartconnect/schoolmanagement/schoolmanagement/schoolmanagement/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\manageteachers.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use or override a deprecated API.
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:150: error: cannot find symbol
                  if ("Science".equals(stream)) intent = new Intent(this, elevensciencehomepage.java);
                                                                                               ^
    symbol:   variable java
    location: class elevensciencehomepage
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:151: error: cannot find symbol
                  else if ("Commerce".equals(stream)) intent = new Intent(this, elevencommercehome.java);
                                                                                                  ^
    symbol:   variable java
    location: class elevencommercehome
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:152: error: cannot find symbol
                  else if ("Arts".equals(stream)) intent = new Intent(this, elevenartshome.java);
                                                                                          ^
    symbol:   variable java
    location: class elevenartshome
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:154: error: cannot find symbol
                  if ("Science".equals(stream)) intent = new Intent(this, twelvesciencehome.java);
                                                                                           ^
    symbol:   variable java
    location: class twelvesciencehome
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:155: error: cannot find symbol
                  else if ("Commerce".equals(stream)) intent = new Intent(this, twelvecommercehome.java);
                                                                                                  ^
    symbol:   variable java
    location: class twelvecommercehome
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:156: error: cannot find symbol
                  else if ("Arts".equals(stream)) intent = new Intent(this, twelveartshome.java);
                                                                                          ^
    symbol:   variable java
    location: class twelveartshome
  C:\Users\kinga\AndroidStudioProjects\finalyearproject\smartconnect\schoolmanagement\schoolmanagement\schoolmanagement\app\src\main\java\com\example\schoolmanagement\studentattendance.java:160: error: cannot find symbol
                  intent = new Intent(this, elevencommercehome.java);
                                                              ^
    symbol:   variable java
    location: class elevencommercehome
  7 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 7s
16 actionable tasks: 1 executed, 15 up-to-date
